# CV-Semester-2

./: .gitignore  README.md  zeichen.txt
Algorithmen und Datenstrukturen/Übung/aud/: SList.java
Algorithmen und Datenstrukturen/Übung/aud/util/: Graphvizable.java
Comoputergrafik/Programmieraufgaben/cg_raytracer_task4/: README.md
Comoputergrafik/Programmieraufgaben/cg_raytracer_task4/assets/: testdice.ppm
Comoputergrafik/Programmieraufgaben/cg_raytracer_task4/doc/: conf.py.in
Comoputergrafik/Programmieraufgaben/cg_raytracer_task4/executables/: main.cpp  task3_materials.h  task4.cpp
Comoputergrafik/Programmieraufgaben/cg_raytracer_task4/src/: ray.cpp  scene.cpp
Comoputergrafik/Übungen/: Übungsblatt10.tex  Übungsblatt2.md  Übungsblatt2.tex  Übungsblatt3.tex  Übungsblatt7.tex  Übungsblatt8.tex
Computergrafik/Programmieraufgaben/: README.md
Computergrafik/Programmieraufgaben/cg_raytracer_task4/executables/: glwindow.h  task4_scene.h
Computergrafik/Programmieraufgaben/cg_raytracer_task4/src/: raytracer.h
Computergrafik/Übungen/: lol.code-workspace  Übungsblatt1.md
Computergrafik/Übungen/files/: Übung3.2.drawio
Logik/: mitschrift.md
Logik/Übungen/: Übung1.md  Übung10.tex  Übung2.md  Übung3.md  Übung8.md  Übung9.tex
Logik/Übungen/fitch/: 13.1.prf  13.2.prf  6.1.prf  6.2.prf  6.4.prf  6.6.prf  6.7.prf  6.8.prf
Psychologie - Wahrnehmung und Kognition/: mitschrift.md
algorithmen und datenstrukturen/: mitschrift.md
algorithmen und datenstrukturen/Programmierwettbewerb/bots/: MyBot.java
algorithmen und datenstrukturen/Übung/Uebung1/: JosephusProblem.java  Palindrome.java  TailRecursion.java
algorithmen und datenstrukturen/Übung/Uebung10/: AdjMatrix.java  B10-1_graphs.md  B10-3_graphsearch.md  GraphSearchDemo.java
algorithmen und datenstrukturen/Übung/Uebung11/: B11-1_topology.md  B11-2_dijkstra.md  B11-3_mst.md  MSTPrimDemo.java
algorithmen und datenstrukturen/Übung/Uebung12/: B12-2_backbag.md
algorithmen und datenstrukturen/Übung/Uebung2/: IntSList.java  LinkedNode.java  SortList.java  TPalindrome.java
algorithmen und datenstrukturen/Übung/Uebung3/: MyCircle.java  MyDList.java  MySList.java
algorithmen und datenstrukturen/Übung/Uebung4/: BuildBinTree.java  ForwardList.java  RecursionToStack.java  what_rec.md
algorithmen und datenstrukturen/Übung/Uebung5/: IntBinTree.java
algorithmen und datenstrukturen/Übung/Uebung6/: SimpleTree.java
algorithmen und datenstrukturen/Übung/Uebung7/: A234Example.java  AVLExample.java  RedBlackExample.java  RedBlackExample.md
algorithmen und datenstrukturen/Übung/Uebung8/: B08-1_BTree.md  B08-2_Heap.md  HeapSort.java  MaxHeap.java  MyBTree.java
algorithmen und datenstrukturen/Übung/Uebung9/: HashLinQuad.java  MyHash.java
algorithmen und datenstrukturen/Übung/Uebung9/Food/: Food.java  IceBox.java
algorithmen und datenstrukturen/Übung/aud/: A234Tree.java  AVLTree.java  BTree.java  BinarySearchTree.java  BinaryTree.java  BinaryTreeTraversal.java  DList.java  KTreeNode.java  Makefile.config  Makefile.in  Queue.java  QueueDL.java  RedBlackTree.java  SList.java  Stack.java  Vector.java  package-info.java
algorithmen und datenstrukturen/Übung/Übung1/: JosephusProblem.java  Palindrome.java  TailRecursion.java
algorithmen und datenstrukturen/Übung/Übung2/: IntSList.java  LinkedNode.java  SortList.java  TPalindrome.java  ad-hoc(polnische Notation).md
algorithmen und datenstrukturen/Übung/Übung3/: MyCircle.java  MyDList.java  MySList.java
algorithmen und datenstrukturen/Übung/Übung4/: BuildBinTree.java  ForwardList.java  RecursionToStack.java
algorithmen und datenstrukturen/Übung/Übung5/: IntBinTree.java
algorithmen und datenstrukturen/Übung/Übung6/: ExprWithPow.java  SimpleTree.java
algorithmen und datenstrukturen/Übung/Übung7/: A234Example.java  AVLExample.java  RedBlackExample.java
algorithmen und datenstrukturen/Übung/Übung8/: MyBTree.java
computergrafik/: mitschrift.md
computergrafik/Programmieraufgaben/cg_introcpp/: CMakeLists.txt  README.md
computergrafik/Programmieraufgaben/cg_introcpp/include/: vector2.h  vector2_temp.h
computergrafik/Programmieraufgaben/cg_introcpp/src/: main.cpp  main_temp.cpp  vector2.cpp
computergrafik/Programmieraufgaben/cg_raytracer_task0/: CMakeLists.txt  TODO.md
computergrafik/Programmieraufgaben/cg_raytracer_task0/doc/: CMakeLists.txt
computergrafik/Programmieraufgaben/cg_raytracer_task0/executables/: CMakeLists.txt  task0.cpp  task3_2.cpp  task5.cpp
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/: CMakeLists.txt  ray.h  scene.cpp  scene.h
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/acceleration/: CMakeLists.txt
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/camera/: CMakeLists.txt
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/geometry/: CMakeLists.txt  assembled_renderable.h
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/geometry/mesh/: CMakeLists.txt  bezier_patch_mesh.h  mesh.h  trumpet.cpp
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/geometry/primitives/: CMakeLists.txt  sphere.h  triangle.cpp  triangle.h
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/interface/: CMakeLists.txt
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/light/: CMakeLists.txt  spotlight.cpp
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/material/: CMakeLists.txt  constantcolormaterial.cpp
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/material/color/: CMakeLists.txt  colors.h
computergrafik/Programmieraufgaben/cg_raytracer_task0/src/utility/: CMakeLists.txt  vec.h
computergrafik/Programmieraufgaben/cg_raytracer_task0/test/: CMakeLists.txt
computergrafik/Übungen/: Unbenanntes Diagramm.drawio  Übung2.2.drawio.html  Übungsblatt10.tex  Übungsblatt11.tex  Übungsblatt2.md  Übungsblatt2.tex  Übungsblatt4.tex  Übungsblatt5.tex  Übungsblatt7.tex
computergrafik/Übungen/files/: Übung2.2.drawio.html  Übung3.2.drawio
computergrafik/übungen/: Übungsblatt1.md
mathe II/: mitschrift.md
mathe II/Übungen/: Übung2.tex
psychologie I/: mitschrift.md
(+184 files in other folders)
